adding css styles

--- a/index.html
+++ b/index.html
@@ -4,8 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
     
+<body>
+    <div class="container">
+        <nav>
+            <a href="" >Contact</a>
+            <a href="" >Work</a>
+            <a href="" >portfolio</a>
+            <a href="" >Contact</a>
+
+        </nav>
+    </div>
+    <section class="headsection">
+        <div class="headsection__left">
+            <h1>Hello,I'm<br><span class="name">SUMAIYA NOOR</span></h1>
+            <h1></h1>
+            <p>A full stack web designer that placerat in massa consectetur</p>
+            <a  class="header_button " href="">Hire me</a>
+        </div>
+        <div class="headsection__right">
+            <img class="headimg" src="images/Group 33080.png" alt="">
+        </div>
+    </section>
+    <section class="headsection">
+        <div class="headsection__left2">
+            <img class="headimg2" src="images/Group 33082.png" alt="">
+
+        </div>
+        <div>
+            <div class="headSection__right2">
+                <h1>about</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Eius repellat unde nesciunt eveniet optio rem! Tenetur quis maxime magni dignissimos voluptatum adipisci numquam sit, 
+                    ullam suscipit aut iure deserunt molestias!</p>
+                    <a  class="header_button2 " href="">Download CV</a>
+        </div>
+
+    </section> 
+    <section>
+        <section class="work">
+            <div class="work__title">
+                <h1><span>latest</span>  working project</h1>
+            </div>
+            <div class="workgp">
+               <div class="work__detail">
+                    <img class="work__img" src="images/image 4.png" alt="">
+                    <h4 class="title">Power-x-gym (gym website)</h4>
+                    <p>Lorem Ipsum is simply dummy text of the 
+                        printing and typesetting industry.
+                   </p>
+               </div>
+            </div>
+            <div class="workgp">
+                <div class="work__detail">
+                     <img class="work__img" src="images/image 5.png" alt="">
+                     <h4 class="title">Creative Agency</h4>
+                     <p>Lorem Ipsum is simply dummy text of the 
+                         printing and typesetting industry.
+                    </p>
+                </div>
+             </div>
+             <div class="workgp">
+                <div class="work__detail">
+                     <img class="work__img" src="images/image 8.png" alt="">
+                     <h4 class="title">Creative Agency</h4>
+                     <p>Lorem Ipsum is simply dummy text of the 
+                         printing and typesetting industry.
+                    </p>
+                </div>
+             </div>
+    </section> 
+    <section class="lastsection">
+        <div class="bimg">
+            <h1><span>WORK INQURY</span> <a  class="header_button3 " href="">Lets chat</a></h1>
+
+        </div>
+    </section>
+    <section class="footer">
+        <div class="f__d">
+            <h5>STAY CONNECTED</h5>
+            <h4>noormonac.46@gmail.com</h4>
+        </div>
+        <div class="f__img">
+            <img class="image" src="icons/Group 33059.png" alt="">
+            <img class="image" src="icons/image 6.png" alt="">
+            <img class="image" src="icons/image 7.png" alt="">
+
+        </div>
+
+    </section>
 </body>
 </html>
